@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-03T13:13:47Z",
-  "count_outdated" : 10351,
-  "uniques_outdated" : 5254,
-  "count" : 10593,
-  "uniques" : 5296,
+  "timestamp" : "2026-02-04T13:12:51Z",
+  "count_outdated" : 10353,
+  "uniques_outdated" : 5256,
+  "count" : 10594,
+  "uniques" : 5297,
   "clones" : [
-    {
-      "timestamp": "2026-01-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2026-01-21T00:00:00Z",
       "count": 2,
@@ -130,6 +121,15 @@
       "uniques": 0,
       "uniques_minmax": [ 0, 0 ],
       "uniques_decinc": [ 0, 0 ]
+    },
+    {
+      "timestamp": "2026-02-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
