@@ -1,12 +1,7 @@
 {
-  "count": 242,
-  "uniques": 42,
+  "count": 241,
+  "uniques": 41,
   "clones": [
-    {
-      "timestamp": "2026-01-20T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2026-01-21T00:00:00Z",
       "count": 2,
@@ -71,6 +66,11 @@
       "timestamp": "2026-02-02T00:00:00Z",
       "count": 0,
       "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
