@@ -1,3 +1,12 @@
+2026-02-04T13:12:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21672799526 # 1422
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
+* notice: last 14d: unq all: 41 241
+* notice: prev accum: outdated-unq outdated-all / unq all: 5254 10351 / 5296 10593
+* notice: next accum: outdated-unq outdated-all / unq all: 5256 10353 / 5297 10594
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2026-01-20] / [2026-02-03]
+
 2026-02-03T13:13:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21631623314 # 1420
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
